resolved bug footer out of container creating whitespace

--- a/rooms/static/rooms/css/rooms.css
+++ b/rooms/static/rooms/css/rooms.css
@@ -45,4 +45,5 @@
     width: 100%;
     height: auto;
     border-radius: 1rem;
+    margin-bottom: 1rem;
 }
